Wed Jun  6 16:52:46 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>

        * ciaosvcs/Events/CIAO_RTEC/CIAO_RTEvent.cpp

          Fixed a type conversion warning on the
          WinXP_VC71_NET_Dynamic_Debug build.
        
Wed Jun  6 02:04:42 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * ciaosvcs/Events/CIAO_RTEC/SimpleAddressServer.cpp:

          Update the name of the test enum value to match the idl.

Tue May 29 21:02:08 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * ciaosvcs/Events/CIAO_RTEC/SimpleAddressServer.h:
        * ciaosvcs/Events/CIAO_RTEC/SimpleAddressServer.cpp:

          Added code to support the new IPv4/IPv6 capable address server.

Sun May 27 16:20:10 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * ciao/Object_Set_T.cpp:

          Enhanced exception safety of this class. Look at BUG ID 2725 for
          details.

Thu May 24 14:52:18 UTC 2007    <dengg@blade23.isislab.vanderbilt.edu>

        * DAnCE/Plan_Launcher/Plan_Launcher_Benchmark_Impl.cpp

          Reverted a change which was accidentally checked in.

Wed May 23 20:01:49 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>

        * DAnCE/Deployment/NodeApp_CB_Impl.cpp:
        * DAnCE/Deployment/NodeApp_CB_Impl.h:
        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp:
        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.h:

          Removed ACE_HAS_THREADS guards.

Wed May 23 18:36:35 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>

        * MPC/config/ciao_deployment_stub.mpb:

          Added "requires += threads" to disable single threaded build.

        * DAnCE/NodeManager/Node_Manager.cpp
        * DAnCE/NodeManager/NodeManager_Impl.cpp
        * DAnCE/NodeManager/NodeManager_Impl.h

          Removed ACE_HAS_THREADS guards.

Wed May 23 02:21:30 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>

        * DAnCE/Deployment/NodeApp_CB_Impl.h:

          Added back #if defined (ACE_HAS_THREADS) macro to