@@ -1,3 +1,10 @@
+Wed Jun  6 20:00:19 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>
+
+        * examples/Null_Component/plan.h
+
+          Fixed Sun C++ on Salaris 10 linkage warning regarding
+          extern "C" and extern "C++" mismatch.
+
 Wed Jun  6 16:52:46 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>
 
         * ciaosvcs/Events/CIAO_RTEC/CIAO_RTEvent.cpp
